[metadata]
description-file = README.md

[azimutt-containers--package]
name = azimutt-containers-package
version = 0.0.1
author = Deepnox
copyright = © Copyright 2020, Deepnox
credits = Deepnox
license = MIT
maintainer = Deepnox
email = contact@deepnox.io
status = Alpha
description =  A tool to evaluate capabilities of your server hosting containers. 
